ingresses/argocd-ingress.yaml
# ingresses/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: EXTERNAL_IP
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
