ingresses/keycloak-ingress.yaml
# ingresses/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: identity
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: EXTERNAL_IP
      http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak  
                port:
                  number: 80
